text overflowing issue at question message on question page fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,6 +194,7 @@ header {
     border: 1px solid #0a52ee;
     font-size: 16px;
     border-radius: 5px;
+    overflow: auto;
 }
 
 #answers_list li {
